Ajouter le sous-module new-todo-app

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fastApiProject"]
 	path = fastApiProject
 	url = https://github.com/shamuz-sa/asd.git
+[submodule "new-todo-app"]
+    path = new-todo-app
+    url =  https://github.com/shamuz-sa/asd.git
